--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -199,7 +199,7 @@ Avoid numerical representation of categorical variables. Don't use 1 or 2 to rep
 
 ### ANOVA within
 
-If you have a study that involves within-participant predictors naming conventions can become exomplex. When you have a single repeated measures predictor like occasion in the previous running example, it is often necessary to spread the level of that varible over multiple columns (e.g., march, may, july).
+If you have a study that involves within-participant predictors naming conventions can become exomplex. When you have a single repeated measures predictor like occasion in the previous running example, it is often necessary to spread the level of that variable over multiple columns (e.g., march, may, july).
 
 When you have multiple repeated measures predictor the situation is even more complicated. In this case, each column name needs to represent the levels of mutiple repeated measures predictors at the time of data entry. For example, imagine you are a food researcher interested in taste ratings (the dependent variable) for various foods and contexts. You have food type (i.e., food_type) as a predictor with three levels (pizza, steak, burger). You have a second predictor temperature with two levels (hot, cold). All participants taste all foods at all temperatures. Thus, six columns are required to record taste rating for each participant: pizza_hot, pizza_cold, steak_hot, steak_cold, burger_hot, and burger_cold. Notice how each name contains one level of each predictor variable. The levels by the two predictor variables are separated by a single underscore. This should be the only underscore in the variable name because that underscore will be used by the computer when changing the data to the tidy format. If you had two underscores an name like "italian_pizza_hot" you would confuse the pivot_longer() command when it attempts to create a tidy version of the data. The computer would think there were three repeated levels variables instead of two. Thus, when dealing with repeated measures predictors, only use underscores to separate levels of predictor variables in column names.
 
@@ -368,7 +368,7 @@ analytic_data_between %>%
 ```
 
 
-Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
+The order of the levels influences how graphs are generated. In these data, the sex column has two levels: male and female in that order. The code below adjusts the order of the sex variable because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
 
 ```{r}
 # Custom reordering of factor levels
@@ -508,8 +508,7 @@ analytic_data_within %>%
   summary()
 ```
 
-
-Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
+The order of the levels influences how graphs are generated. In these data, the sex column has two levels: male and female in that order. The code below adjusts the order of the sex variable because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
 
 ```{r}
 # Custom reordering of factor levels
@@ -530,9 +529,9 @@ analytic_data_within %>%
 
 ### Numeric screening
 
-For numeric variables, you should search for impossible values. For example, in the context of this example you want to ensure non of the elapsed_times are impossible or so large they appear to be data entry errors.
+For numeric variables, it's important find and remove impossible values. For example, in the context of this example you want to ensure none of the elapsed_times are impossible (i.e., negative) or clearly data entry errors.
 
-Because we have several columns that we doing numeric screening for, it's better to use the skim() command from the skimr package. The skim() command quickly provides the basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75.  
+Because we have several numeric columns that we are screening, we use the skim() command from the skimr package. The skim() command quickly provides basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75.
 
 
 ```{r}
@@ -583,7 +582,7 @@ The analytic data in it's current for does not conform to the the tidy data spec
 print(analytic_data_within)
 ```
 
-The pivot_longer() command below coverts our data to the tidy data format. In this command we specify the the columns march, may, and june are all levels of a single varible called occasion. We specify the columns involved with the cols argument. The code march:july after the cols argument indicates to the computer to use the march column and the july column and all the columns in between. Each column name represents a level of the variable occasion. The names_to argument is used to indicate that a new column called occasion should be created to hold the different months. The value_to argument is used to indicate that a new column called elapsed_time should created to hold all the values from the march, may, and july column.
+The pivot_longer() command below coverts our data to the tidy data format. In this command we specify the the columns march, may, and june are all levels of a single variable called occasion. We specify the columns involved with the cols argument. The code march:july after the cols argument selects the march column, the july column, and all the columns in between. Each column represents a level of the variable occasion. The names_to argument is used to indicate that a new column called occasion should be created to hold the different months. The value_to argument is used to indicate that a new column called elapsed_time should created to hold all the values from the march, may, and july column.
 
 ```{r}
 analytic_data_within_tidy <- analytic_data_within %>%
@@ -611,17 +610,23 @@ You can confirm that occasion is now a factor with the glimpse() command. Once t
 glimpse(analytic_data_within_tidy)
 ```
 
-You now have two data sest analytic_data_within and analytic_data_within_tidy. You can calculate descriptive statistics, correlations and general cross-sectional analyses using the analytic_data_within data set. If you want to conduct a repeated measures ANOVA you use the analytic_data_within_tidy data set. Both data sets are now ready for analysis.
+You now have two data sets analytic_data_within and analytic_data_within_tidy. You can calculate descriptive statistics, correlations and general cross-sectional analyses using the analytic_data_within data set. If you want to conduct a repeated measures ANOVA you use the analytic_data_within_tidy data set. Both data sets are now ready for analysis.
 
 ## Experiment: Within N-way
 
-The N-way within-participant ANOVA example uses the data file data_food.csv. Initial loading of the file, including the specification of missing data codes, is provided by the code below. The data corresponds to a designs where the researcher is interested in assessing the taste of food as a function of food type (pizza/steak/burger) and temperature (hot/cold).
+This section outlines a workflow appropriate for when you have a repeated measures design with multiple repeated measurs predictors. The data corresponds to a designs where the researcher is interested in assessing the taste of food as a function of food type (pizza/steak/burger) and temperature (hot/cold).
 
+To Begin:
 
+* Use the Files tab to confirm you have the data: data_food.csv
+
+* Start a new script for this example. Don't forget to start the script name with "script_".
+
+ 
 ```{r, results='hide', message = FALSE}
 # Date: YYYY-MM-DD
 # Name: your name here
-# Example: Within-participant experiment
+# Example: 2-way within-participant experiment
 
 # Load data
 library(tidyverse)
@@ -630,7 +635,11 @@ my_missing_value_codes <- c("-999", "", "NA")
 
 raw_data_within_nway <- read_csv(file = "data_food.csv",
                      na = my_missing_value_codes)
+```
 
+We load the initial data into a raw_data_within_nway but immediately make a copy we will work with called analytic_data_within_nway. It's good to keep a copy of the raw data for reference if you encounter problems.
+
+```{r}
 analytic_data_within_nway <- raw_data_within_nway
 
 ```
@@ -655,21 +664,22 @@ glimpse(analytic_data_within_nway)
 
 ### Creating factors
 
-Following initial cleaning, identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect glimpse() output - if you followed our data entry naming conventions categorical variables should be of the type character. We have one variable sex that is categorical that is of type character (i.e., chr). The participant id column is categorical as well, but of type double (i.e., dbl) which is a numeric column.
+Following initial cleaning, we identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. In this example, there are two categorical variables id and sex, but both are represented numerically.  As revealed by the glimpse() output.
 
 
 ```{r}
 glimpse(analytic_data_within_nway)
 ```
 
-The sex column is a numeric column, so we have handle that column on it's own. 
+We convert both the sex and id columns to factors with the mutate() command below:
 
 ```{r}
 analytic_data_within_nway <-analytic_data_within_nway %>%
-  mutate(sex = as_factor(sex))
+  mutate(id = as_factor(id),
+         sex = as_factor(sex))
 ```
 
-Now the sex column is a factor but we have to tell the computer that 1 indicates male and 2 indicates female.
+The sex column is a factor but we have to tell the computer that 1 indicates male and 2 indicates female.
 
 ```{r}
 analytic_data_within_nway <-analytic_data_within_nway %>%
@@ -678,25 +688,24 @@ analytic_data_within_nway <-analytic_data_within_nway %>%
                           female = "2"))
 ```
 
-The participant identification number in the id column is a numeric column, so we have handle that column on it's own. 
-
-```{r}
-analytic_data_within_nway <-analytic_data_within_nway %>%
-  mutate(id = as_factor(id))
-```
-
 You can ensure all of these columns are now factors using the glimpse() command. 
 
 ```{r}
 glimpse(analytic_data_within_nway)
 ```
 
-Inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors.
+Inspect the output of the glimpse() command and make sure you have coverted all categorical variables to factors - especially those you will use as predictors. As noted in the previous examples, its common to have additional columns that are categorical predictors but appear in the glimpse() output as being of the type character. That is not the case in these data, but if it were the command below would turn them into factors:
 
+```{r, eval = FALSE}
+analytic_data_within_nway <- analytic_data_within_nway %>%
+  mutate(across(.cols = where(is.character),
+                .fns = as_factor))
+
+```
 
 ### Factor screening
 
-Inspect the levels of each factor carefully. Make sure that there not any levels present that are incorrect. For example, you wouldn't want to the following levels for sex: male, mmale, female. Obviously,  mmale is an incorrectly typed version of male. Scan all the factor in your data for eronious factor levels. The code below displays the factor levels:
+Inspect the levels of each factor carefully. Make sure that there not any levels for a factor that are incorrect. For example, you wouldn't want to the following levels for sex: male, mmale, female. Obviously,  mmale is an incorrectly typed version of male. Scan all the factors in your data for eronious factor levels. The code below displays the factor levels:
 
 
 ```{r}
@@ -705,8 +714,7 @@ analytic_data_within_nway %>%
   summary()
 ```
 
-
-Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how text output and graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
+The order of the levels influences how graphs are generated. In these data, the sex column has two levels: male and female in that order. The code below adjusts the order of the sex variable because we want the x-axis of a future graph to display columns in the left to right order: female, male. 
 
 ```{r}
 # Custom reordering of factor levels
@@ -718,26 +726,67 @@ analytic_data_within_nway <- analytic_data_within_nway %>%
 
 
 You can see the new order of the factor levels with summary():
+
 ```{r}
 analytic_data_within_nway %>%
   select(where(is.factor)) %>%
   summary()
 ```
 
-
 ### Numeric screening
 
-For numeric variables, you should search for impossible values.e For example, in the context of this example you want to ensure non of the elapsed_times are impossible or so large they appear to be data entry errors.
+For numeric variables, it's important find and remove impossible values. For example, in the context of this example you want to ensure none of the taste ratings the six columns (pizza_hot, pizza_cold, steak_hot, steak_cold, burger_hot, and burger_cold) are outside the range of the 1 to 10 rating scale.
 
-One options for doing so is the summary command again. This time, however, we use "is.numeric" in the where() command.
+Because we have several numeric columns that we are screening, we use the skim() command from the skimr package. The skim() command quickly provides basic descriptive statistics. In the output for this command there are also several columns that begin with p: p0, p25, p50, p75, and p100 (p25 and p75 omitted in output due to space). These columns correspond to the 0th, 25th, 50th, 75th, and 100th percentiles, respectively. The minimum and maximum values for the data column are indicated under the p0 and p100 labels. The median is the 50th percentile (p50). The interquartile range is the range between p25 and p75.
+
 
 ```{r}
+library(skimr)
+
 analytic_data_within_nway %>%
   select(where(is.numeric)) %>%
-  summary()
+  skim()
 ```
 
-Scan the min and max values for each variable to ensure there are not any impossible values. If necessary, got back to the original data source and fix these impossible value. Alternatively, you might need to change them to missing values (i.e., NA values). Once this is complete, you are done preparing your between participant analytic data.
+```{r, echo=FALSE}
+library(tidyverse)
+
+outdf <- analytic_data_within_nway %>%
+  select(where(is.numeric)) %>%
+  skim_without_charts() %>%
+  as_tibble() %>%
+  select(-skim_type) %>%
+    rename_with(.fn = str_remove,
+              .cols = everything(),
+              pattern = "numeric.") %>%
+  select(-p25, -complete_rate, -p75) %>%
+  as.data.frame()
+
+outdf$mean = round(outdf$mean,2)
+outdf$sd = round(outdf$sd,2)
+
+outdf
+```
+
+Scan the minimum and maximum values (p0 and p100) to ensure there are not any impossible values. That is values outside the 1 to 10 range in this example. If necessary, got back to the original data source and fix these impossible value. Alternatively, you might need to change them to missing values (i.e., NA values). 
+
+In this example all the values are reasonable values. However, if we discovered an out of range value (or values) for elapsed time we could convert those values to missing values with the code below. This code changes (i.e., mutates) a value in the pizza_hot column to become NA (not available or missing) if that value is outside the 1 to 10 range of the rating scale. Note that when using this command we have to be very specific in terms of specifying our missing value. It usually needs to be one of NA_real_ or NA_character_. For numeric columns use NA_real_ and for character columns use NA_character_. 
+
+```{r, eval = FALSE}
+# Values lower than 1 are converted to missing values
+analytic_data_within_nway <- analytic_data_within_nway  %>% 
+    mutate(pizza_hot = case_when(
+      pizza_hot < 1  ~ NA_real_,
+      pizza_hot >= 1 ~ pizza_hot))
+
+# Values greater than 10 are converted to missing values
+analytic_data_within_nway <- analytic_data_within_nway  %>% 
+    mutate(pizza_hot = case_when(
+      pizza_hot > 10  ~ NA_real_,
+      pizza_hot <= 10 ~ pizza_hot))
+
+```
+
 
 ### Pivot to tidy data
 
@@ -748,7 +797,7 @@ The analytic data in it's current for does not conform to the the tidy data spec
 print(analytic_data_within_nway)
 ```
 
-The pivot_long() command below coverts our data to the tidy data format. In this command we specify the the columns march, may, and june are all levels of a single varible called occasion. We specify the columns involved with the cols argument. The code march:july after the cols argument indicates to the computer to use the march column and the july column and all the columns in between. Each column name represents a level of the variable occasion. The names_to argument is used to indicate that a new column called occasion should be created to hold the different months. The value_to argument is used to indicate that a new column called elapsed_time should created to hold all the values from the march, may, and july column.
+The pivot_long() command below coverts our data to the tidy data format. In this command we specify the the columns march, may, and june are all levels of a single variable called occasion. We specify the columns involved with the cols argument. The code march:july after the cols argument indicates to the computer to use the march column and the july column and all the columns in between. Each column name represents a level of the variable occasion. The names_to argument is used to indicate that a new column called occasion should be created to hold the different months. The value_to argument is used to indicate that a new column called elapsed_time should created to hold all the values from the march, may, and july column.
 
 ```{r}
 analytic_data_nway_tidy <- analytic_data_within_nway %>%
@@ -778,6 +827,9 @@ You can confirm that occasion is now a factor with the glimpse() command. Once t
 ```{r}
 glimpse(analytic_data_nway_tidy)
 ```
+
+
+You now have two data sets analytic_data_within_nway and analytic_data_nway_tidy. You can calculate descriptive statistics, correlations and general cross-sectional analyses using the analytic_data_within_nway data set. If you want to conduct a repeated measures ANOVA you use the analytic_data_nway_tidy data set. Both data sets are now ready for analysis.
 
 ## Surveys: Single Occassion
 
@@ -878,7 +930,7 @@ analytic_data_survey %>%
 ```
 
 
-Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how text output and graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male.
+Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how text output and graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex variable because we want the x-axis of a future graph to display columns in the left to right order: female, male.
 
 ```{r}
 # Custom reordering of factor levels
@@ -1181,7 +1233,7 @@ analytic_data_occasions %>%
   summary()
 ```
 
-Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how text output and graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex varible because we want the x-axis of a future graph to display columns in the left to right order: female, male.
+Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how text output and graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex variable because we want the x-axis of a future graph to display columns in the left to right order: female, male.
 
 ```{r}
 # Custom reordering of factor levels for sex
